[package]
name = "curv"
version = "0.7.0"
edition = "2018"
authors = ["Omer Shlomovits"]
license = "MIT"
description = "Curv contains an extremly simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
crate-type = ["lib"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
blake2b_simd = "0.5.7"
#cryptoxide = "0.1.2"
#curve25519-dalek = "1.2.3"
derivative = "2.2" # Not available in SGX world
digest = "0.8.1" # Not available in SGX world
#ff-zeroize = { package = "ff", version = "0.6.3", git = "https://github.com/Polkadex-Substrate/ff-zeroize.git" }
#funty = "=1.1.0" Not used
#generic-array = "0.14"
hex = { version = "0.4", git = "https://github.com/mesalock-linux/rust-hex-sgx.git" }
hmac = "0.7.1" # Alternative is avaible in SGX world
merkle-sha3 = "^0.1" # Can be converted using SGX world
lazy_static = "1.4.0" # can be converted
num-traits = { version = "0.2", git = "https://github.com/mesalock-linux/num-traits-sgx.git" }
num-integer = { version = "0.1", git = "https://github.com/mesalock-linux/num-integer-sgx.git" }
#pairing-plus = "0.19"
rand = { version = "0.7.3", git = "https://github.com/mesalock-linux/rand-sgx.git" }
ring-algorithm = "0.2.3" # Can be converted
rust-crypto = "^0.2" # used in primitives/hashing/merkle_tree
serde = { version = "1.0", features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx.git" }
serde_derive = "1.0"
sha2 = "0.8.0" # can be converted
sha3 = "0.8.2" # can be converted
zeroize = "1"
libsecp256k1 = { version = "0.3.5", git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx.git" }
rust-gmp-kzen = { package = "rust-gmp", version = "0.5", git = "https://github.com/Polkadex-Substrate/rust-gmp.git", features = ["serde_support"], optional = true }
#num-bigint = { version = "0.4", features = ["serde"], optional = true }

# TODO: Replace secp256k1 with libsecp256k1
[dependencies.secp256k1]
version = "0.20"
features = ["rand-std"]

[dependencies.p256]
version = "0.8.1"
features = ["ecdsa"]

[dev-dependencies]
bincode = { version = "1.1", git = "https://github.com/mesalock-linux/bincode-sgx.git" }
serde_json = { version = "1.0", git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
paste = "1.0.2"
proptest = "0.10"
proptest-derive = "0.2"

[features]
default = ["rust-gmp-kzen"]
