[package]
name = "curv"
version = "0.7.0"
edition = "2018"
authors = ["Omer Shlomovits"]
license = "MIT"
description = "Curv contains an extremly simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
crate-type = ["lib"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
# The following crates are okay with SGX
blake2b_simd = { version = "0.5.7", default-features = false }
digest = { version = "0.8.1", git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx.git" } # Not available in SGX world
hex = { version = "0.4", git = "https://github.com/mesalock-linux/rust-hex-sgx.git" }
hmac = { version = "0.7.1", git = "https://github.com/mesalock-linux/rustcrypto-MACs-sgx.git" } # Alternative is avaible in SGX world
num-traits = { version = "0.2", git = "https://github.com/mesalock-linux/num-traits-sgx.git" }
num-integer = { version = "0.1", git = "https://github.com/mesalock-linux/num-integer-sgx.git" }
rand = { tag = "v0.7.3_sgx1.1.3", git = "https://github.com/mesalock-linux/rand-sgx.git" }
serde = { version = "1.0", features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx.git" }
sha2 = { version = "0.8.0", git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git" }
sha3 = { version = "0.8.2", git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git" }
libsecp256k1 = { version = "0.3.5", git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx.git" }
rust-gmp-kzen = { package = "rust-gmp", version = "0.5", git = "https://github.com/Polkadex-Substrate/rust-gmp.git", optional = true }
rust-crypto = { version = "^0.2", git = "https://github.com/Polkadex-Substrate/rust-crypto.git" }
ring-algorithm = { version = "0.3.0", git = "https://github.com/Polkadex-Substrate/ring-algorithm.git" }
serde_derive = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx.git" }

# The following crates are either not okay or not tested with SGX
derivative = "2.2" # Not available in SGX world
zeroize = "1"
#merkle-sha3 = "^0.1" # Can be converted using SGX world
lazy_static = "1.4.0" # can be converted

[dependencies.p256]
version = "0.8.1"
features = ["ecdsa"]

[dev-dependencies]
bincode = { version = "1.1", git = "https://github.com/mesalock-linux/bincode-sgx.git" }
serde_json = { version = "1.0", git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
paste = "1.0.2"

[features]
default = ["rust-gmp-kzen"]
